@@ -74,6 +74,9 @@ configuration found in the slurm.conf, Slurm will tell the client command,
 after waiting for all nodes to boot, each node's ip address. However, in
 environments where the nodes are in DNS, this step can be avoided by
 configuring this option.
+<dt><b>SlurmctldParameters=idle_on_node_suspend</b>
+<dd>Mark nodes as idle, regardless of current state, when suspending nodes with
+SuspendProgram so that nodes will be eligible to be resumed at a later time.
 <dt><b>SuspendExcNodes</b>
 <dd>Nodes not subject to suspend/resume logic. This may be used to avoid
 suspending and resuming nodes which are not in the cloud. Alternately the
